# 06_matrix

./: .travis.yml  CMakeLists.txt  main.cpp
include/: Matrix.h  MatrixElement.h  MatrixRow.h  matrix.h  matrixElement.h  matrixFunctions.h  matrixRow.h
src/: main.cpp
test/: CMakeLists.txt  test_main.cpp
